# devnotes

./: Cargo.toml
src/: backend.rs  commands.rs  config.rs  lib.rs  main.rs  sqlite.rs
