[package]
name = "devnotes"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.27.0"
itertools = "0.13.0"
ratatui = "0.26.3"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.38.0", features = ["full"] }
tui-textarea = "0.4.0"
uuid = "1.8.0"
