[package]
name = "devnotes"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.27.0"
itertools = "0.13.0"
ratatui = { version = "0.26.3", features = ["all-widgets"] }
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio", "chrono"] }
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.14"
tui-textarea = "0.4.0"
uuid = { version = "1.8.0", features = ["v4"] }
serde = { version = "1.0.203", features = ["derive"] }
